# toyou-cleanup

./: .gitignore  Cargo.toml  Dockerfile  config.toml
.github/workflows/: build.yml  cleanup.yml
src/: config.rs  main.rs
src/cleanups/: mod.rs  picture.rs  share.rs  user.rs
src/entity/: mod.rs  oauth.rs  orders.rs  permission.rs  picture.rs  prelude.rs  real_name.rs  share.rs  user.rs  user_picture.rs
